prusti-tests/tests/parse/ui/simple_and.stderr
error[E0308]: mismatched types
 --> $DIR/simple_and.rs:5:12
  |
5 | #[requires(12345)]
  |            ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
 --> $DIR/simple_and.rs:8:17
  |
8 | #[requires     (12345)]
  |                 ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:17:5
   |
17 |     12345) ]
   |     ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:22:5
   |
22 |     12345)
   |     ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:26:20
   |
26 | #[requires(true && 12345)]
   |                    ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:31:5
   |
31 |     12345  
   |     ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:36:13
   |
36 |             456)]
   |             ^^^ expected `bool`, found integer

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
